--- a/index.html
+++ b/index.html
@@ -1,134 +1,146 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <title>Title</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="main.css">           
+    <link rel="stylesheet" href="main.css">
     <!--datables CSS básico-->
-    <link rel="stylesheet" type="text/css" href="datatables/datatables.min.css"/>
+    <link rel="stylesheet" type="text/css" href="datatables/datatables.min.css" />
     <!-- Bootstrap CSS v5.2.0-beta1 -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"  integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
-  </head>
-  <body>
+</head>
+
+<body>
 
     <header>
         <h1 class="text-center text-light">Control Escolar</h1>
-        <h2 class="text-center text-light">Tabla <span class="badge bg-danger">ALUMNOS</span></h2> 
-    </header>    
-   <div style="height:50px"></div>
-    
-   <div class="container">
-    <div class="row">
-        <div class="col-lg-12">
-            <button id="btnNuevo" type="button" class="btn btn-info" data-toggle="modal"><i class="material-icons">library_add</i></button>
-        </div>
-    </div>
-</div>
-<br>
+        <h2 class="text-center text-light">Tabla ALUMNOS <span class="badge bg-danger">BETA</span></h2>
+    </header>
+    <div style="height:50px"></div>
 
-<div class="container caja">
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="table-responsive">
-                <table id="tablaAlumnos" class="table table-striped table-bordered table-condensed" style="width:100%">
-                    <thead class="text-center">
-                        <tr>
-                            <th>ID</th>
-                            <th>MATRICULA</th>
-                            <th>NOMBRE</th>
-                            <th>APELLIDO</th>
-                            <th>EC</th>
-                            <!-- <th>CARRERAS</th>
-                            <th>DOCUMENTOS</th> -->
-                           <!-- <th>Acciones</th> -->
-                        </tr>
-                    </thead>
-                    <tbody>
-                    </tbody>
-                </table>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <button id="btnNuevo" type="button" class="btn btn-info" data-toggle="modal"><i
+                        class="material-icons">AGREGAR</i></button>
             </div>
         </div>
     </div>
-</div>
+    <br>
 
-<!--Modal para CRUD-->
-<div class="modal fade" id="modalCRUD" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel"></h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
-                </button>
+    <div class="container caja">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="table-responsive">
+                    <table id="tablaAlumnos" class="table table-striped table-bordered table-condensed"
+                        style="width:100%">
+                        <thead class="text-center">
+                            <tr>
+                                <th>ID</th>
+                                <th>MATRICULA</th>
+                                <th>NOMBRE</th>
+                                <th>APELLIDO</th>
+                                <th>EC</th>
+                                <th>CARRERAS</th>
+                                <th>DOCUMENTOS</th>
+                                <th>Acciones</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                        </tbody>
+                    </table>
+                </div>
             </div>
-            <form id="formUsuarios">
-                <div class="modal-body">
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <div class="form-group">
-                                <label for="" class="col-form-label">User Name:</label>
-                                <input type="text" class="form-control" id="username">
-                            </div>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="form-group">
-                                <label for="" class="col-form-label">First Name</label>
-                                <input type="text" class="form-control" id="first_name">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <div class="form-group">
-                                <label for="" class="col-form-label">Last Name</label>
-                                <input type="text" class="form-control" id="last_name">
-                            </div>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="form-group">
-                                <label for="" class="col-form-label">Gender</label>
-                                <input type="text" class="form-control" id="gender">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-9">
-                            <div class="form-group">
-                                <label for="" class="col-form-label">Password</label>
-                                <input type="text" class="form-control" id="password">
-                            </div>
-                        </div>
-                        <div class="col-lg-3">
-                            <div class="form-group">
-                                <label for="" class="col-form-label">Status</label>
-                                <input type="number" class="form-control" id="status">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-light" data-dismiss="modal">Cancelar</button>
-                    <button type="submit" id="btnGuardar" class="btn btn-dark">Guardar</button>
-                </div>
-            </form>
         </div>
     </div>
-</div>
+
+    <!--Modal para CRUD-->
+    <div class="modal fade" id="modalCRUD" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel"></h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                            aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <form id="formUsuarios">
+                    <div class="modal-body">
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    <label for="" class="col-form-label">User Name:</label>
+                                    <input type="text" class="form-control" id="username">
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    <label for="" class="col-form-label">First Name</label>
+                                    <input type="text" class="form-control" id="first_name">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    <label for="" class="col-form-label">Last Name</label>
+                                    <input type="text" class="form-control" id="last_name">
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    <label for="" class="col-form-label">Gender</label>
+                                    <input type="text" class="form-control" id="gender">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-9">
+                                <div class="form-group">
+                                    <label for="" class="col-form-label">Password</label>
+                                    <input type="text" class="form-control" id="password">
+                                </div>
+                            </div>
+                            <div class="col-lg-3">
+                                <div class="form-group">
+                                    <label for="" class="col-form-label">Status</label>
+                                    <input type="number" class="form-control" id="status">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-light" data-dismiss="modal">Cancelar</button>
+                        <button type="submit" id="btnGuardar" class="btn btn-dark">Guardar</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 
 
-   <!-- Jquery -->
-   <script src="jquery/jquery-3.3.1.min.js"></script>
-   <!-- datatables JS -->
-   <script type="text/javascript" src="datatables/datatables.min.js"></script>        
-   <script type="text/javascript" src="main.js"></script>  
+    <!-- Jquery -->
+    <script src="jquery/jquery-3.3.1.min.js"></script>
+    <!-- datatables JS -->
+    <script type="text/javascript" src="datatables/datatables.min.js"></script>
+    <script type="text/javascript" src="main.js"></script>
 
 
     <!-- Bootstrap JavaScript Libraries -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
+        integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
+        crossorigin="anonymous"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js"
+        integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
