se avanzo a alumnos

--- a/index.html
+++ b/index.html
@@ -71,32 +71,27 @@
                             aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <form id="formUsuarios">
+                <form id="formAlumnos">
                     <div class="modal-body">
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="form-group">
-                                    <label for="" class="col-form-label">User Name:</label>
+                                    <label for="" class="col-form-label">MATRICULA:</label>
                                     <input type="text" class="form-control" id="username">
                                 </div>
                             </div>
-                            <div class="col-lg-6">
-                                <div class="form-group">
-                                    <label for="" class="col-form-label">First Name</label>
-                                    <input type="text" class="form-control" id="first_name">
-                                </div>
-                            </div>
+
                         </div>
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="form-group">
-                                    <label for="" class="col-form-label">Last Name</label>
+                                    <label for="" class="col-form-label">NOMBRE:</label>
                                     <input type="text" class="form-control" id="last_name">
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="form-group">
-                                    <label for="" class="col-form-label">Gender</label>
+                                    <label for="" class="col-form-label">APELLIDO:</label>
                                     <input type="text" class="form-control" id="gender">
                                 </div>
                             </div>
@@ -104,14 +99,42 @@
                         <div class="row">
                             <div class="col-lg-9">
                                 <div class="form-group">
-                                    <label for="" class="col-form-label">Password</label>
+                                    <label for="" class="col-form-label">BODEGA</label>
                                     <input type="text" class="form-control" id="password">
                                 </div>
                             </div>
                             <div class="col-lg-3">
                                 <div class="form-group">
-                                    <label for="" class="col-form-label">Status</label>
+                                    <label for="" class="col-form-label">EC</label>
                                     <input type="number" class="form-control" id="status">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-9">
+                                <div class="form-group">
+                                    <label for="" class="col-form-label">CARRERA</label>
+                                    <input type="text" class="form-control" id="carr">
+                                </div>
+                            </div>
+                            <div class="col-lg-3">
+                                <div class="form-group">
+                                    <label for="" class="col-form-label">CANTIDAD</label>
+                                    <input type="number" class="form-control" id="cant">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-9">
+                                <div class="form-group">
+                                    <label for="" class="col-form-label">DOCUMENTOS</label>
+                                    <input type="text" class="form-control" id="docs">
+                                </div>
+                            </div>
+                            <div class="col-lg-3">
+                                <div class="form-group">
+                                    <label for="" class="col-form-label">CANTIDAD</label>
+                                    <input type="number" class="form-control" id="cantdoc">
                                 </div>
                             </div>
                         </div>
@@ -124,6 +147,11 @@
             </div>
         </div>
     </div>
+
+    <button type="button" class="btn btn-secondary" data-bs-toggle="popover" data-bs-placement="bottom" title="Documentos"
+        data-bs-content="Lista de Documentos">
+        DOCUMENTOS
+    </button>
 
 
     <!-- Jquery -->
