se reacomodaron los archivos

--- a/facultades.html
+++ b/facultades.html
@@ -90,7 +90,7 @@
     <script src="jquery/jquery-3.3.1.min.js"></script>
     <!-- datatables JS -->
     <script type="text/javascript" src="datatables/datatables.min.js"></script>
-    <script type="text/javascript" src="facultades.js"></script>
+    <script type="text/javascript" src="js/facultades.js"></script>
 
 
     <!-- Bootstrap JavaScript Libraries -->
