--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <script src="jquery/jquery-3.3.1.min.js"></script>
     <!-- datatables JS -->
     <script type="text/javascript" src="datatables/datatables.min.js"></script>
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 
 
     <!-- Bootstrap JavaScript Libraries -->
