--- a/ec.html
+++ b/ec.html
@@ -46,6 +46,7 @@
                                 <th>NUMERO</th>
                                 <th>ALMACEN_ID</th>  <!-- permanece oculto porque tiene la id -->
                                 <th>ALMACEN</th>  
+                                <th>acciones</th>
                             </tr>
                         </thead>
                         <tbody>
