--- a/usuarios.html
+++ b/usuarios.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Ec</title>
+    <title>USUARIOS</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -44,7 +44,6 @@
                             <tr>
                                 <th>ID</th>
                                 <th>USUARIO</th>
-                                <th>CONTRASEÑA</th>  <!-- permanece oculto porque tiene la id -->
                                 <th>PUESTO</th>  
                                 <th>acciones</th>
                             </tr>
@@ -74,7 +73,7 @@
                             <div class="col-lg-6">
                                 <div class="form-group">
                                     <label for="" class="col-form-label">USUARIO:</label>
-                                    <input type="text" class="form-control" id="usurio_username>
+                                    <input type="text" class="form-control" id="usurio_username">
                                 </div>
                             </div>
                         </div>
