--- a/index.html
+++ b/index.html
@@ -42,11 +42,13 @@
                         style="width:100%">
                         <thead class="text-center">
                             <tr>
-                                <th>ID</th>
+                                <th>ID</th> <!-- oculto -->
                                 <th>MATRICULA</th>
                                 <th>NOMBRE</th>
                                 <th>APELLIDO</th>
+                                <th>EC id</th> <!-- oculto -->
                                 <th>EC</th>
+                                <th>SALA</th>
                                 <th>CARRERAS</th>
                                 <th>DOCUMENTOS</th>
                                 <th>Acciones</th>
@@ -99,9 +101,8 @@
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="form-group">
-                                    <label for="" class="col-form-label">BOGEGA:</label>
-                                    <select class="form-select" aria-label="Default select example"
-                                        id="selectBodega">
+                                    <label for="" class="col-form-label">ALMACEN:</label>
+                                    <select class="form-select" aria-label="Default select example" id="selectAlmacen">
                                     </select>
                                 </div>
                             </div>
@@ -115,8 +116,9 @@
                         </div>
 
                         <hr> <!--  linea divisora  -->
+                        <h5>CARRERAS</h5> <!-- titulo -->
                         <div class="row">
-                            <div class="col-lg-5">
+                            <div class="col-lg-6">
                                 <div class="form-group">
                                     <label for="" class="col-form-label">FACULTAD:</label>
                                     <select class="form-select" aria-label="Default select example"
@@ -124,7 +126,7 @@
                                     </select>
                                 </div>
                             </div>
-                            <div class="col-lg-5">
+                            <div class="col-lg-6">
                                 <div class="form-group">
                                     <label for="" class="col-form-label">CARRERA:</label>
                                     <select class="form-select" aria-label="Default select example" id="selectCarreras">
@@ -132,7 +134,17 @@
                                 </div>
                             </div>
 
-                            <div class="col-lg-2">
+                        </div>
+
+                        <div class="row">
+                            <div class="col-lg-8">
+                                <div class="form-group">
+                                    <label for="" class="col-form-label">GENERACION:</label>
+                                    <input type="number" id="selectCantidad" min="1900" max="2099" step="1" value="2022"
+                                        class="form-control">
+                                </div>
+                            </div>
+                            <div class="col-lg-4">
                                 <div class="row align-items-center">
                                     <label for="" class="col-form-label">AGREGAR:</label>
                                     <button class='btn btn-outline-success btn-sm btnAddcarrera' data-toggle='tooltip'
@@ -143,8 +155,9 @@
                             </div>
                         </div>
                         <hr> <!--  linea divisora  -->
+                        <h5>DOCUMENTOS</h5> <!-- titulo -->
                         <div class="row">
-                            <div class="col-lg-5">
+                            <div class="col-lg-9">
                                 <div class="form-group">
                                     <label for="" class="col-form-label">DOCUMENTO:</label>
                                     <select class="form-select" aria-label="Default select example"
@@ -152,14 +165,23 @@
                                     </select>
                                 </div>
                             </div>
-                            <div class="col-lg-5">
+                            <div class="col-lg-3">
                                 <div class="form-group">
                                     <label for="" class="col-form-label">CANTIDAD:</label>
-                                    <select class="form-select" aria-label="Default select example" id="selectCantidad">
+                                    <input type="number" id="selectCantidad" value="1" class="form-control">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-9">
+                                <div class="form-group">
+                                    <label for="" class="col-form-label">ESTADO:</label>
+                                    <select class="form-select" aria-label="Default select example" id="selectEstados">
+                                        <option value="xd"> xd</option>
                                     </select>
                                 </div>
                             </div>
-                            <div class="col-lg-2">
+                            <div class="col-lg-3">
                                 <div class="row align-items-center">
                                     <label for="" class="col-form-label">AGREGAR:</label>
                                     <button class='btn btn-outline-success btn-sm btnAddDocomento' data-toggle='tooltip'
@@ -192,6 +214,8 @@
                     </button>
                 </div>
                 <div class="modal-body" id="bodyDocumentos">
+                    <ul class="list-group" id="listaDocumentos">
+                    </ul>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-light" data-bs-dismiss="modal">CERRAR</button>
@@ -213,6 +237,8 @@
                     </button>
                 </div>
                 <div class="modal-body" id="bodyCarreras">
+                    <ul class="list-group" id="listaCarreras">
+                    </ul>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-light" data-bs-dismiss="modal">CERRAR</button>
@@ -241,14 +267,3 @@
 </body>
 
 </html>
-
-
-
-<div class='wrapper text-center'>
-    <div class='btn-group'>
-        <button class='btn btn-info btn-sm btnEditar' data-toggle='tooltip' title='Editar'>
-            <i class='material-icons'>Editar</i>
-        </button>
-
-    </div>
-</div>
