ajustes de diseño en documentos del alumno

--- a/index.html
+++ b/index.html
@@ -177,7 +177,9 @@
                                 <div class="form-group">
                                     <label for="" class="col-form-label">ESTADO:</label>
                                     <select class="form-select" aria-label="Default select example" id="selectEstados">
-                                        <option value="xd"> xd</option>
+                                        <option value="A">BUEN ESTADO</option>
+                                        <option value="B">DAÑADO</option>
+                                        <option value="C">ILEGIBLE</option>
                                     </select>
                                 </div>
                             </div>
