--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                                 <th>APELLIDO</th>
                                 <th>EC id</th> <!-- oculto -->
                                 <th>EC</th>
+                                <th>SALA id</th> <!-- oculto -->
                                 <th>SALA</th>
                                 <th>CARRERAS</th>
                                 <th>DOCUMENTOS</th>
